--- a/batch_scripts/linux/installation/environment_linux_py36tca.yml
+++ b/batch_scripts/linux/installation/environment_linux_py36tca.yml
@@ -1,6 +1,5 @@
 name: py36tca
 channels:
-  - plotly
   - conda-forge
   - defaults
 dependencies:
@@ -8,31 +7,32 @@ dependencies:
   - aniso8601=8.0.0=py_0
   - arctic=1.79.2=py_4
   - arrow-cpp=0.16.0=py36hb0edad2_0
-  - atomicwrites=1.4.0=pyh9f0ad1d_0
   - attrs=19.3.0=py_0
   - aws-sdk-cpp=1.7.164=hc831370_1
-  - backcall=0.1.0=py_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.1=py_0
   - beautifulsoup4=4.8.0=py36_0
   - bleach=3.1.5=pyh9f0ad1d_0
-  - blosc=1.19.0=he1b5a44_0
+  - blosc=1.20.0=he1b5a44_0
   - bokeh=2.0.1=py36h9f0ad1d_0
   - boost-cpp=1.70.0=ha2d47e9_1
   - boto3=1.5.11=py36_0
   - botocore=1.5.92=py36_0
-  - bqplot=0.12.12=pyh9f0ad1d_0
+  - bqplot=0.12.14=pyh9f0ad1d_0
   - brotlipy=0.7.0=py36h8c4c3a4_1000
   - bzip2=1.0.8=h516909a_2
-  - c-ares=1.15.0=h516909a_1001
-  - ca-certificates=2020.4.5.2=hecda079_0
-  - certifi=2020.4.5.2=py36h9f0ad1d_0
+  - c-ares=1.16.1=h516909a_0
+  - ca-certificates=2020.6.20=hecda079_0
+  - certifi=2020.6.20=py36h9f0ad1d_0
   - cffi=1.11.5=py36_0
   - chardet=3.0.4=py36h9f0ad1d_1006
   - click=7.1.2=pyh9f0ad1d_0
   - cloudpickle=1.3.0=py_0
-  - coverage=5.1=py36h8c4c3a4_0
-  - coveralls=2.0.0=py_0
-  - cryptography=2.9.2=py36h45558ae_0
-  - curl=7.69.1=h33f0ec9_0
+  - coverage=5.2.1=py36h8c4c3a4_0
+  - coveralls=2.1.1=py_0
+  - cryptography=3.0=py36h45558ae_0
+  - curl=7.71.1=he644dc0_3
   - cycler=0.10.0=py_2
   - cython=0.29.13=py36he1b5a44_0
   - cytoolz=0.10.1=py36h516909a_0
@@ -41,7 +41,7 @@ dependencies:
   - dbus=1.13.6=he372182_0
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
-  - dill=0.3.1.1=py36h9f0ad1d_1
+  - dill=0.3.2=pyh9f0ad1d_0
   - distributed=2.14.0=py36h9f0ad1d_0
   - docopt=0.6.2=py_1
   - docutils=0.16=py36h9f0ad1d_1
@@ -54,10 +54,9 @@ dependencies:
   - fontconfig=2.13.1=he4413a7_1000
   - freetds=1.1.15=h8385b1f_0
   - freetype=2.10.2=he06d7ca_0
-  - freetype-py=2.1.0.post1=py_0
-  - fsspec=0.7.4=py_0
-  - gflags=2.2.2=he1b5a44_1002
-  - glib=2.63.1=h3eb4bd4_1
+  - freetype-py=2.2.0=pyh9f0ad1d_0
+  - gflags=2.2.2=he1b5a44_1004
+  - glib=2.65.0=h3eb4bd4_0
   - glog=0.4.0=h49b9bf7_3
   - grpc-cpp=1.25.0=h213be95_2
   - gst-plugins-base=1.14.0=hbbd80ab_1
@@ -66,48 +65,49 @@ dependencies:
   - hdf5=1.10.5=nompi_h3c11f04_1104
   - heapdict=1.0.1=py_0
   - icu=58.2=hf484d3e_1000
-  - idna=2.9=py_1
-  - importlib-metadata=1.6.1=py36h9f0ad1d_0
-  - importlib_metadata=1.6.1=0
-  - ipykernel=5.3.0=py36h95af2a2_0
-  - ipython=7.15.0=py36h9f0ad1d_0
+  - idna=2.10=pyh9f0ad1d_0
+  - importlib-metadata=1.7.0=py36h9f0ad1d_0
+  - importlib_metadata=1.7.0=0
+  - ipykernel=5.3.4=py36h95af2a2_0
+  - ipython=7.16.1=py36h95af2a2_0
   - ipython_genutils=0.2.0=py_1
   - ipywidgets=7.5.1=py_0
   - itsdangerous=1.1.0=py_0
-  - jedi=0.17.0=py36h9f0ad1d_0
-  - jinja2=2.11.1=py_0
+  - jedi=0.17.2=py36h9f0ad1d_0
+  - jinja2=2.11.2=pyh9f0ad1d_0
   - jmespath=0.10.0=pyh9f0ad1d_0
   - jpeg=9d=h516909a_0
   - json5=0.9.4=pyh9f0ad1d_0
   - jsonschema=3.2.0=py36h9f0ad1d_1
-  - jupyter_client=6.1.3=py_0
+  - jupyter_client=6.1.6=py_0
   - jupyter_contrib_core=0.3.3=py_2
   - jupyter_contrib_nbextensions=0.5.1=py36_0
   - jupyter_core=4.6.3=py36h9f0ad1d_1
   - jupyter_highlight_selected_word=0.2.0=py36_1000
   - jupyter_latex_envs=1.4.6=py36_1000
-  - jupyter_nbextensions_configurator=0.4.1=py36_0
-  - jupyterlab=2.1.4=py_0
-  - jupyterlab_server=1.1.5=py_0
+  - jupyter_nbextensions_configurator=0.4.1=py36h9f0ad1d_1
+  - jupyterlab=2.2.2=py_0
+  - jupyterlab_server=1.2.0=py_0
   - kiwisolver=1.2.0=py36hdb11119_0
-  - krb5=1.17.1=h173b8e3_0
+  - krb5=1.17.1=hfafb76e_1
+  - lcms2=2.11=hbd6801e_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
-  - libblas=3.8.0=14_openblas
-  - libcblas=3.8.0=14_openblas
-  - libcurl=7.69.1=hf7181ac_0
-  - libedit=3.1.20181209=hc058e9b_0
-  - libevent=2.1.10=h72c5cf5_0
-  - libffi=3.3=he6710b0_1
+  - libblas=3.8.0=17_openblas
+  - libcblas=3.8.0=17_openblas
+  - libcurl=7.71.1=hcdd3856_3
+  - libedit=3.1.20191231=h14c3975_1
+  - libevent=2.1.10=hcdb4288_1
+  - libffi=3.3=he6710b0_2
   - libgcc-ng=9.1.0=hdf63c60_0
-  - libgfortran-ng=7.5.0=hdf63c60_6
+  - libgfortran-ng=7.5.0=hdf63c60_10
   - libiconv=1.15=h516909a_1006
-  - liblapack=3.8.0=14_openblas
+  - liblapack=3.8.0=17_openblas
   - libllvm8=8.0.1=hc9558a2_0
-  - libopenblas=0.3.7=h5ec1e0e_6
+  - libopenblas=0.3.10=pthreads_hb3c22a3_4
   - libpng=1.6.37=hed695b0_1
   - libprotobuf=3.11.0=h8b12597_0
   - libsodium=1.0.17=h516909a_0
-  - libssh2=1.9.0=hab1572f_2
+  - libssh2=1.9.0=hab1572f_4
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - libtiff=4.1.0=hc7e4089_6
   - libuuid=2.32.1=h14c3975_1000
@@ -122,51 +122,51 @@ dependencies:
   - lz4-c=1.8.3=he1b5a44_1001
   - lzo=2.10=h14c3975_1000
   - markupsafe=1.1.1=py36h8c4c3a4_1
-  - matplotlib=3.1.1=py36h5429711_0
+  - matplotlib=3.1.1=py36_0
+  - matplotlib-base=3.1.1=py36hfd891ef_0
   - mistune=0.8.4=py36h8c4c3a4_1001
   - mock=4.0.2=py36h9f0ad1d_0
   - mockextras=1.0.2=py36h9f0ad1d_1
-  - more-itertools=8.3.0=py_1
+  - more-itertools=8.4.0=py_0
   - msgpack-python=1.0.0=py36hdb11119_1
-  - multiprocess=0.70.8=py36h516909a_1
+  - multiprocess=0.70.9=py36h8c4c3a4_1
   - nbconvert=5.6.1=py36h9f0ad1d_1
-  - nbformat=5.0.6=py_0
+  - nbformat=5.0.7=py_0
   - ncurses=6.2=he6710b0_1
   - nodejs=12.4.0=he1b5a44_0
-  - notebook=6.0.3=py36h9f0ad1d_0
+  - notebook=6.0.3=py36h9f0ad1d_1
   - numba=0.48.0=py36hb3f55d8_0
   - numexpr=2.7.1=py36h830a2c2_1
-  - numpy=1.16.4=py36h95a1406_0
+  - numpy=1.18.5=py36h7314795_0
   - olefile=0.46=py_0
   - openssl=1.1.1g=h516909a_0
   - packaging=20.4=pyh9f0ad1d_0
-  - pandas=0.24.2=py36hb3f55d8_1
-  - pandoc=2.9.2.1=0
+  - pandas=0.25.3=py36hb3f55d8_0
+  - pandoc=2.10.1=h516909a_0
   - pandocfilters=1.4.2=py_1
   - parquet-cpp=1.5.1=2
-  - parso=0.7.0=pyh9f0ad1d_0
+  - parso=0.7.1=pyh9f0ad1d_0
   - partd=1.1.0=py_0
   - pathos=0.2.1=py_2
   - patsy=0.5.1=py_0
   - pcre=8.44=he1b5a44_0
   - pexpect=4.8.0=py36h9f0ad1d_1
   - pickleshare=0.7.5=py36h9f0ad1d_1001
-  - pillow=5.3.0=py36h00a061d_1000
-  - pip=20.0.2=py36_3
-  - plotly-orca=1.3.1=1
-  - pluggy=0.13.1=py36h9f0ad1d_1
-  - pox=0.2.7=py_0
+  - pillow=7.2.0=py36h8328e55_1
+  - pip=20.1.1=py36_1
+  - pluggy=0.13.1=py36h9f0ad1d_2
+  - pox=0.2.8=pyh9f0ad1d_0
   - ppft=1.6.6.1=py36h9f0ad1d_1
   - prometheus_client=0.8.0=pyh9f0ad1d_0
-  - prompt-toolkit=3.0.5=py_0
+  - prompt-toolkit=3.0.5=py_1
   - psutil=5.6.3=py36h516909a_0
   - pthread-stubs=0.4=h14c3975_1001
   - ptyprocess=0.6.0=py_1001
-  - py=1.8.1=py_0
+  - py=1.9.0=pyh9f0ad1d_0
   - pyarrow=0.16.0=py36h8b68381_1
-  - pycparser=2.20=py_0
+  - pycparser=2.20=pyh9f0ad1d_2
   - pygments=2.6.1=py_0
-  - pymongo=3.10.1=py36h831f99a_1
+  - pymongo=3.10.1=py36h831f99a_2
   - pymssql=2.1.4=py36hf484d3e_2001
   - pyodbc=4.0.23=py36hfc679d8_1
   - pyopenssl=19.1.0=py_1
@@ -175,7 +175,7 @@ dependencies:
   - pyrsistent=0.16.0=py36h8c4c3a4_0
   - pysocks=1.7.1=py36h9f0ad1d_1
   - pytables=3.5.2=py36h9f153d1_2
-  - pytest=5.1.0=py36_0
+  - pytest=5.4.3=py36h9f0ad1d_0
   - pytest-cov=2.5.1=py_1
   - python=3.6.10=h7579374_2
   - python-blosc=1.8.3=py36hb3f55d8_0
@@ -190,27 +190,27 @@ dependencies:
   - re2=2020.04.01=he1b5a44_0
   - readline=8.0=h7b6447c_0
   - redis-py=3.3.7=py_0
-  - requests=2.23.0=pyh8c360ce_2
-  - rise=5.6.1=py36_0
+  - requests=2.24.0=pyh9f0ad1d_0
+  - rise=5.6.1=py36h9f0ad1d_1
   - s3transfer=0.1.13=py36_1001
-  - scipy=1.3.1=py36h921218d_2
+  - scipy=1.4.1=py36h2d22cac_3
   - send2trash=1.5.0=py_0
-  - setuptools=47.1.1=py36_0
+  - setuptools=49.2.0=py36_0
   - setuptools-git=1.2=py_1
   - sip=4.19.8=py36hf484d3e_1000
   - six=1.15.0=pyh9f0ad1d_0
-  - snappy=1.1.8=he1b5a44_1
-  - sortedcontainers=2.2.1=pyh9f0ad1d_0
+  - snappy=1.1.8=he1b5a44_3
+  - sortedcontainers=2.2.2=pyh9f0ad1d_0
   - soupsieve=2.0.1=py36h9f0ad1d_0
-  - sqlalchemy=1.3.7=py36h516909a_0
-  - sqlite=3.31.1=h62c20be_1
-  - statsmodels=0.10.1=py36hc1659b7_2
+  - sqlalchemy=1.3.17=py36h8c4c3a4_0
+  - sqlite=3.32.3=h62c20be_0
+  - statsmodels=0.11.1=py36h8c4c3a4_2
   - tblib=1.6.0=py_0
   - terminado=0.8.3=py36h9f0ad1d_1
   - testpath=0.4.4=py_0
   - thrift=0.11.0=py36he1b5a44_1001
   - thrift-cpp=0.12.0=hf3afdfd_1004
-  - tk=8.6.8=hbc83047_0
+  - tk=8.6.10=hbc83047_0
   - toolz=0.10.0=py_0
   - tornado=6.0.4=py36h8c4c3a4_1
   - traitlets=4.3.3=py36h9f0ad1d_1
@@ -218,13 +218,13 @@ dependencies:
   - typing_extensions=3.7.4.2=py_0
   - tzlocal=2.1=pyh9f0ad1d_0
   - unixodbc=2.3.7=hd1b7508_1000
-  - urllib3=1.25.9=py_0
+  - urllib3=1.25.10=py_0
   - vispy=0.6.4=py36h931dd22_1
-  - wcwidth=0.2.4=pyh9f0ad1d_0
+  - wcwidth=0.2.5=pyh9f0ad1d_1
   - webencodings=0.5.1=py_1
   - werkzeug=0.16.0=py_0
   - wheel=0.34.2=py36_0
-  - widgetsnbextension=3.5.1=py36_0
+  - widgetsnbextension=3.5.1=py36h9f0ad1d_1
   - wkhtmltopdf=0.12.4=1
   - xorg-kbproto=1.0.7=h14c3975_1002
   - xorg-libx11=1.6.9=h516909a_0
@@ -269,21 +269,22 @@ dependencies:
     - dnspython==1.16.0
     - dtale==1.8.1
     - et-xmlfile==1.0.1
-    - findatapy==0.1.11
+    - findatapy==0.1.12
     - flask-compress==1.5.0
     - flask-ngrok==0.0.25
     - flask-seasurf==0.2.2
     - flask-session==0.3.1
+    - fsspec==0.3.3
     - future==0.18.2
     - fxcmpy==1.2.6
-    - html5lib==1.0.1
+    - html5lib==1.1
     - idna-ssl==1.1.0
     - inflection==0.5.0
     - influxdb==5.2.3
     - jdcal==1.4.1
     - jeepney==0.4.3
     - jupyter-dash==0.2.1
-    - kaleido==0.0.1
+    - kaleido==0.0.2
     - keyring==21.2.1
     - kombu==4.6.7
     - multidict==4.7.6
@@ -291,8 +292,8 @@ dependencies:
     - multitasking==0.0.9
     - mysql-connector-python==8.0.19
     - oauthlib==3.1.0
-    - openpyxl==3.0.3
-    - pandas-datareader==0.8.1
+    - openpyxl==3.0.4
+    - pandas-datareader==0.9.0
     - plotly==4.9.0
     - protobuf==3.6.1
     - pyphen==0.9.5
@@ -300,7 +301,7 @@ dependencies:
     - pytest-tap==3.1
     - python-memcached==1.59
     - qpython==2.0.0
-    - quandl==3.5.0
+    - quandl==3.5.2
     - requests-oauthlib==1.3.0
     - retrying==1.3.3
     - secretstorage==3.1.2
@@ -312,6 +313,5 @@ dependencies:
     - vine==1.3.0
     - weasyprint==51
     - websocket-client==0.57.0
-    - yarl==1.4.2
+    - yarl==1.5.0
     - yfinance==0.1.54
-
