--- a/batch_scripts/windows/installation/environment_windows_py36tca.yml
+++ b/batch_scripts/windows/installation/environment_windows_py36tca.yml
@@ -1,39 +1,39 @@
 name: py36tca
 channels:
-  - plotly
   - conda-forge
   - defaults
 dependencies:
-  - abseil-cpp=20200225.2=h33f27b4_0
+  - abseil-cpp=20200225.2=ha925a31_1
   - arctic=1.79.2=py_4
-  - arrow-cpp=0.16.0=py36h62365dd_4
-  - atomicwrites=1.3.0=py_0
+  - arrow-cpp=0.16.0=py36ha4a5f68_7_cpu
+  - atomicwrites=1.4.0=pyh9f0ad1d_0
   - attrs=19.3.0=py_0
   - aws-sdk-cpp=1.7.164=vc14h867dc94_1
-  - backcall=0.1.0=py_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.1=py_0
   - beautifulsoup4=4.8.0=py36_0
   - blas=1.0=mkl
-  - bleach=3.1.4=pyh9f0ad1d_0
-  - blosc=1.18.1=h6538335_0
+  - bleach=3.1.5=pyh9f0ad1d_0
+  - blosc=1.20.0=ha925a31_0
   - bokeh=2.0.1=py36h9f0ad1d_0
-  - boost-cpp=1.72.0=h0caebb8_0
-  - bqplot=0.12.6=pyh8c360ce_0
-  - brotli=1.0.7=he025d50_1001
+  - boost-cpp=1.72.0=h89d28cc_2
+  - bqplot=0.12.14=pyh9f0ad1d_0
   - brotlipy=0.7.0=py36h779f372_1000
   - bzip2=1.0.8=hfa6e2cd_2
-  - c-ares=1.15.0=h2fa13f4_1001
-  - ca-certificates=2020.4.5.1=hecc5488_0
-  - certifi=2020.4.5.1=py36h9f0ad1d_0
-  - cffi=1.14.0=py36ha419a9e_0
+  - c-ares=1.16.1=h62dcd97_0
+  - ca-certificates=2020.6.20=hecda079_0
+  - certifi=2020.6.20=py36h9f0ad1d_0
+  - cffi=1.14.1=py36hef61171_0
   - chardet=3.0.4=py36h9f0ad1d_1006
-  - click=7.1.1=pyh8c360ce_0
+  - click=7.1.2=pyh9f0ad1d_0
   - cloudpickle=1.3.0=py_0
   - colorama=0.4.3=py_0
   - comtypes=1.1.7=py36h9f0ad1d_1001
-  - coverage=5.1=py36h779f372_0
-  - coveralls=2.0.0=py_0
-  - cryptography=2.8=py36hb32ad35_1
-  - curl=7.69.1=h1dcc11c_0
+  - coverage=5.2.1=py36h779f372_0
+  - coveralls=2.1.1=py_0
+  - cryptography=3.0=py36hef61171_0
+  - curl=7.71.1=h4b64cdc_3
   - cycler=0.10.0=py_2
   - cython=0.29.13=py36h6538335_0
   - cytoolz=0.10.1=py36hfa6e2cd_0
@@ -41,65 +41,64 @@ dependencies:
   - dask-core=2.14.0=py_0
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
-  - dill=0.3.1.1=py36h9f0ad1d_1
+  - dill=0.3.2=pyh9f0ad1d_0
   - distributed=2.14.0=py36h9f0ad1d_0
   - docopt=0.6.2=py_1
   - entrypoints=0.3=py36h9f0ad1d_1001
   - enum-compat=0.0.3=py36h9f0ad1d_1
   - fastparquet=0.3.3=py36hc8d92b1_0
   - freetds=1.00.97=h7a1dbc1_0
-  - freetype=2.10.1=ha9979f8_0
-  - freetype-py=2.1.0.post1=py_0
-  - fsspec=0.7.3=py_0
-  - gflags=2.2.2=he025d50_1002
+  - freetype=2.10.2=hd328e21_0
+  - freetype-py=2.2.0=pyh9f0ad1d_0
+  - gflags=2.2.2=ha925a31_1004
   - glog=0.4.0=h0174b99_3
   - grpc-cpp=1.28.1=h7c6d948_2
   - hdf5=1.10.5=nompi_ha405e13_1104
   - heapdict=1.0.1=py_0
   - icc_rt=2019.0.0=h0cc432a_1
   - icu=64.2=he025d50_1
-  - idna=2.9=py_1
-  - importlib-metadata=1.6.0=py36h9f0ad1d_0
-  - importlib_metadata=1.6.0=0
+  - idna=2.10=pyh9f0ad1d_0
+  - importlib-metadata=1.7.0=py36h9f0ad1d_0
+  - importlib_metadata=1.7.0=0
   - intel-openmp=2019.4=245
-  - ipykernel=5.2.1=py36h5ca1d4c_0
-  - ipython=7.13.0=py36h9f0ad1d_2
+  - ipykernel=5.3.4=py36h5ca1d4c_0
+  - ipython=7.16.1=py36h95af2a2_0
   - ipython_genutils=0.2.0=py_1
   - ipywidgets=7.5.1=py_0
-  - jedi=0.17.0=py36h9f0ad1d_0
-  - jinja2=2.11.1=py_0
-  - jpeg=9c=hfa6e2cd_1001
-  - json5=0.9.0=py_0
+  - jedi=0.17.2=py36h9f0ad1d_0
+  - jinja2=2.11.2=pyh9f0ad1d_0
+  - jpeg=9d=he774522_0
+  - json5=0.9.4=pyh9f0ad1d_0
   - jsonschema=3.2.0=py36h9f0ad1d_1
-  - jupyter_client=6.1.3=py_0
+  - jupyter_client=6.1.6=py_0
   - jupyter_contrib_core=0.3.3=py_2
   - jupyter_contrib_nbextensions=0.5.1=py36_0
   - jupyter_core=4.6.3=py36h9f0ad1d_1
   - jupyter_highlight_selected_word=0.2.0=py36_1000
   - jupyter_latex_envs=1.4.4=py36_1000
-  - jupyter_nbextensions_configurator=0.4.1=py36_0
-  - jupyterlab=2.1.0=py_0
-  - jupyterlab_server=1.1.1=py_0
+  - jupyter_nbextensions_configurator=0.4.1=py36h9f0ad1d_1
+  - jupyterlab=2.2.2=py_0
+  - jupyterlab_server=1.2.0=py_0
   - kiwisolver=1.2.0=py36h246c5b5_0
-  - krb5=1.17.1=hdd46e55_0
+  - krb5=1.17.1=hc04afaa_1
   - libblas=3.8.0=14_mkl
   - libcblas=3.8.0=14_mkl
   - libclang=9.0.1=default_hf44288c_0
-  - libcurl=7.69.1=h1dcc11c_0
+  - libcurl=7.71.1=h4b64cdc_3
   - libiconv=1.15=hfa6e2cd_1006
   - liblapack=3.8.0=14_mkl
   - libpng=1.6.37=hfe6a214_1
   - libprotobuf=3.11.4=h1a1b453_0
   - libsodium=1.0.17=h2fa13f4_0
-  - libssh2=1.8.2=h642c060_2
+  - libssh2=1.9.0=hb06d900_4
   - libtiff=4.1.0=h885aae3_6
-  - libxml2=2.9.10=h9ce36c8_0
-  - libxslt=1.1.33=heafd4d3_0
+  - libxml2=2.9.10=h5d81f1c_2
+  - libxslt=1.1.33=h579f668_1
   - llvmlite=0.31.0=py36h9f0ad1d_1
   - locket=0.2.0=py_2
-  - lxml=4.5.0=py36hf64afbf_1
-  - lz4=3.0.2=py36hb89cb5d_2
-  - lz4-c=1.9.2=h33f27b4_0
+  - lxml=4.5.2=py36hd9844f4_0
+  - lz4=3.1.0=py36hb89cb5d_0
+  - lz4-c=1.9.2=h62dcd97_1
   - m2w64-gcc-libgfortran=5.3.0=6
   - m2w64-gcc-libs=5.3.0=7
   - m2w64-gcc-libs-core=5.3.0=7
@@ -111,82 +110,80 @@ dependencies:
   - mistune=0.8.4=py36h68a101e_1001
   - mkl=2019.4=245
   - mkl-service=2.3.0=py36hfa6e2cd_0
-  - mock=3.0.5=py36h9f0ad1d_1
+  - mock=4.0.2=py36h9f0ad1d_0
   - mockextras=1.0.2=py36h9f0ad1d_1
-  - more-itertools=8.2.0=py_0
+  - more-itertools=8.4.0=py_0
   - msgpack-python=1.0.0=py36h246c5b5_1
   - msys2-conda-epoch=20160418=1
-  - multiprocess=0.70.8=py36hfa6e2cd_1
+  - multiprocess=0.70.9=py36h68a101e_1
   - nbconvert=5.6.1=py36h9f0ad1d_1
-  - nbformat=5.0.6=py_0
-  - nodejs=13.13.0=0
-  - notebook=6.0.3=py36_0
+  - nbformat=5.0.7=py_0
+  - nodejs=14.6.0=0
+  - notebook=6.0.3=py36h9f0ad1d_1
   - numba=0.48.0=py36he350917_0
-  - numexpr=2.7.1=py36hbd05846_1
-  - numpy=1.16.4=py36hc71023c_0
+  - numexpr=2.7.1=py36h003fed8_1
+  - numpy=1.18.5=py36h4d86e3b_0
   - olefile=0.46=py_0
   - openssl=1.1.1g=he774522_0
-  - packaging=20.1=py_0
-  - pandas=0.24.2=py36he350917_1
-  - pandoc=2.9.2.1=0
+  - packaging=20.4=pyh9f0ad1d_0
+  - pandas=0.25.3=py36he350917_0
+  - pandoc=2.10.1=he774522_0
   - pandocfilters=1.4.2=py_1
   - parquet-cpp=1.5.1=2
-  - parso=0.7.0=pyh9f0ad1d_0
+  - parso=0.7.1=pyh9f0ad1d_0
   - partd=1.1.0=py_0
   - pathos=0.2.1=py_2
   - patsy=0.5.1=py_0
   - pickleshare=0.7.5=py36h9f0ad1d_1001
-  - pillow=7.1.1=py36h8ffffea_0
-  - pip=20.0.2=py36_1
-  - plotly-orca=1.3.1=1
-  - pluggy=0.12.0=py_0
-  - pox=0.2.7=py_0
+  - pillow=7.2.0=py36he4e95fe_1
+  - pip=20.1.1=py_1
+  - pluggy=0.13.1=py36h9f0ad1d_2
+  - pox=0.2.8=pyh9f0ad1d_0
   - ppft=1.6.6.1=py36h9f0ad1d_1
-  - prometheus_client=0.7.1=py_0
-  - prompt-toolkit=3.0.5=py_0
+  - prometheus_client=0.8.0=pyh9f0ad1d_0
+  - prompt-toolkit=3.0.5=py_1
   - psutil=5.6.3=py36hfa6e2cd_0
-  - py=1.8.1=py_0
-  - pyarrow=0.16.0=py36ha017999_2
-  - pycparser=2.20=py_0
+  - py=1.9.0=pyh9f0ad1d_0
+  - pyarrow=0.16.0=py36h1010576_3_cpu
+  - pycparser=2.20=pyh9f0ad1d_2
   - pygments=2.6.1=py_0
-  - pymongo=3.10.1=py36h6538335_0
-  - pymssql=2.1.4=py36hfa6e2cd_0
+  - pymongo=3.10.1=py36h003fed8_2
+  - pymssql=2.1.4=py36he774522_0
   - pyodbc=4.0.23=py36h6538335_1
   - pyopenssl=19.1.0=py_1
   - pyparsing=2.4.7=pyh9f0ad1d_0
   - pyqt=5.12.3=py36h6538335_1
-  - pyreadline=2.1=py36_1001
   - pyrsistent=0.16.0=py36h68a101e_0
   - pysocks=1.7.1=py36h9f0ad1d_1
   - pytables=3.5.2=py36h26f9782_2
-  - pytest=5.1.0=py36_0
+  - pytest=5.4.3=py36h9f0ad1d_0
   - pytest-cov=2.5.1=py_1
-  - python=3.6.10=h9f7ef89_1
+  - python=3.6.10=he025d50_1009_cpython
   - python-blosc=1.8.3=py36heecdd80_0
   - python-dateutil=2.8.1=py_0
   - python-snappy=0.5.4=py36h9a6de72_1
   - python_abi=3.6=1_cp36m
-  - pytz=2019.3=py_0
+  - pytz=2020.1=pyh9f0ad1d_0
   - pywin32=227=py36hfa6e2cd_0
   - pywinpty=0.5.7=py36_0
   - pyyaml=5.3.1=py36h68a101e_0
-  - pyzmq=19.0.0=py36ha89082f_1
+  - pyzmq=19.0.1=py36h274d426_0
   - qt=5.12.5=h7ef1ec2_0
-  - re2=2020.04.01=vc14h6538335_0
+  - re2=2020.05.01=h33f27b4_1
   - redis-py=3.3.7=py_0
-  - requests=2.23.0=pyh8c360ce_2
-  - rise=5.6.1=py36_0
-  - scipy=1.3.1=py36h29ff71c_0
+  - requests=2.24.0=pyh9f0ad1d_0
+  - rise=5.6.1=py36h9f0ad1d_1
+  - scipy=1.4.1=py36h9439919_0
   - send2trash=1.5.0=py_0
-  - setuptools=46.1.3=py36_0
+  - setuptools=49.2.0=py36h9f0ad1d_0
   - setuptools-git=1.2=py_1
-  - six=1.14.0=py_1
-  - snappy=1.1.8=he025d50_1
-  - sortedcontainers=2.1.0=py_0
-  - soupsieve=1.9.4=py36h9f0ad1d_1
-  - sqlalchemy=1.3.7=py36hfa6e2cd_0
-  - sqlite=3.31.1=h2a8f88b_1
-  - statsmodels=0.10.1=py36hc8d92b1_2
+  - six=1.15.0=pyh9f0ad1d_0
+  - snappy=1.1.8=ha925a31_3
+  - sortedcontainers=2.2.2=pyh9f0ad1d_0
+  - soupsieve=2.0.1=py36h9f0ad1d_0
+  - sqlalchemy=1.3.17=py36h779f372_0
+  - sqlite=3.32.3=he774522_1
+  - statsmodels=0.11.1=py36h779f372_2
   - tblib=1.6.0=py_0
   - terminado=0.8.3=py36h9f0ad1d_1
   - testpath=0.4.4=py_0
@@ -197,34 +194,37 @@ dependencies:
   - tornado=6.0.4=py36hfa6e2cd_0
   - traitlets=4.3.3=py36h9f0ad1d_1
   - traittypes=0.2.1=py_1
-  - typing_extensions=3.7.4.1=py36h9f0ad1d_3
-  - tzlocal=2.0.0=py_0
-  - urllib3=1.25.9=py_0
-  - vc=14.1=h0510ff6_4
-  - vispy=0.6.4=py36hc8d92b1_0
-  - vs2015_runtime=14.16.27012=hf0eaf9b_1
-  - wcwidth=0.1.9=pyh9f0ad1d_0
+  - typing_extensions=3.7.4.2=py_0
+  - tzlocal=2.1=pyh9f0ad1d_0
+  - urllib3=1.25.10=py_0
+  - vc=14.1=h869be7e_1
+  - vispy=0.6.4=py36hbd37c6d_1
+  - vs2015_runtime=14.16.27012=h30e32a0_2
+  - wcwidth=0.2.5=pyh9f0ad1d_1
   - webencodings=0.5.1=py_1
-  - wheel=0.34.2=py36_0
-  - widgetsnbextension=3.5.1=py36_0
+  - wheel=0.34.2=py_1
+  - widgetsnbextension=3.5.1=py36h9f0ad1d_1
   - win_inet_pton=1.1.0=py36_0
-  - wincertstore=0.2=py36h7fe50ca_0
+  - wincertstore=0.2=py36_1003
   - winpty=0.4.3=4
   - xlwings=0.19.4=py36h9f0ad1d_0
-  - xz=5.2.5=h2fa13f4_0
-  - yaml=0.2.4=he774522_0
-  - zeromq=4.3.2=h6538335_2
+  - xz=5.2.5=h62dcd97_1
+  - yaml=0.2.5=he774522_0
+  - zeromq=4.3.2=ha925a31_3
   - zict=2.0.0=py_0
   - zipp=3.1.0=py_0
-  - zlib=1.2.11=h62dcd97_4
-  - zstd=1.4.4=h9f78265_3
+  - zlib=1.2.11=h2fa13f4_1006
+  - zstd=1.4.5=h1f3a1b7_2
   - pip:
-    - alpha-vantage==2.1.3
+    - aiohttp==3.6.2
+    - alpha-vantage==2.2.0
     - amqp==2.5.2
     - ansi2html==1.5.2
+    - async-timeout==3.0.1
     - billiard==3.6.3.0
     - boto3==1.5.11
     - botocore==1.8.50
+    - brotli==1.0.7
     - cairocffi==1.1.0
     - cairosvg==2.4.2
     - celery==4.4.0
@@ -237,7 +237,7 @@ dependencies:
     - dash==1.12.0
     - dash-auth==1.3.2
     - dash-core-components==1.10.0
-    - dash-daq==0.4.0
+    - dash-daq==0.5.0
     - dash-html-components==1.0.3
     - dash-renderer==1.4.1
     - dash-table==4.7.0
@@ -245,32 +245,35 @@ dependencies:
     - docutils==0.16
     - dtale==1.8.1
     - et-xmlfile==1.0.1
-    - findatapy==0.1.11
+    - findatapy==0.1.12
     - flask==1.1.2
-    - flask-compress==1.4.0
+    - flask-compress==1.5.0
     - flask-ngrok==0.0.25
     - flask-seasurf==0.2.2
     - flask-session==0.3.1
+    - fsspec==0.3.3
     - future==0.18.2
     - fxcmpy==1.2.6
-    - html5lib==1.0.1
-    - inflection==0.4.0
+    - html5lib==1.1
+    - idna-ssl==1.1.0
+    - inflection==0.5.0
     - influxdb==5.2.3
     - itsdangerous==1.1.0
     - jdcal==1.4.1
-    - jmespath==0.9.5
+    - jmespath==0.10.0
     - jupyter-dash==0.2.1
-    - keyring==21.2.0
+    - kaleido==0.0.2
+    - keyring==21.2.1
     - kombu==4.6.7
+    - multidict==4.7.6
     - multiprocessing-on-dill==3.5.0a4
     - multitasking==0.0.9
     - mysql-connector-python==8.0.19
     - oauthlib==3.1.0
-    - openpyxl==3.0.3
-    - pandas-datareader==0.8.1
+    - openpyxl==3.0.4
+    - pandas-datareader==0.9.0
     - pdfkit==0.6.1
-    - plotly==4.8.0
-    - plotly-express==0.4.1
+    - plotly==4.9.0
     - protobuf==3.6.1
     - pyphen==0.9.5
     - pyqt5-sip==4.19.18
@@ -280,7 +283,7 @@ dependencies:
     - python-memcached==1.59
     - pywin32-ctypes==0.2.0
     - qpython==2.0.0
-    - quandl==3.5.0
+    - quandl==3.5.2
     - requests-oauthlib==1.3.0
     - retrying==1.3.3
     - s3transfer==0.1.13
@@ -293,5 +296,6 @@ dependencies:
     - weasyprint==51
     - websocket-client==0.57.0
     - werkzeug==1.0.1
+    - yarl==1.5.0
     - yfinance==0.1.54
 
