--- a/batch_scripts/linux/installation/environment_linux_py37tca.yml
+++ b/batch_scripts/linux/installation/environment_linux_py37tca.yml
@@ -61,7 +61,6 @@ dependencies:
   - hdf5=1.10.6=nompi_h3c11f04_101
   - heapdict=1.0.1=py_0
   - icu=67.1=he1b5a44_0
-  - idna=2.10=pyh9f0ad1d_0
   - importlib-metadata=1.7.0=py37hc8dfbb8_0
   - importlib_metadata=1.7.0=0
   - iniconfig=1.0.1=pyh9f0ad1d_0
@@ -187,7 +186,6 @@ dependencies:
   - re2=2020.08.01=he1b5a44_0
   - readline=8.0=h7b6447c_0
   - redis-py=3.5.3=pyh9f0ad1d_0
-  - requests=2.24.0=pyh9f0ad1d_0
   - rise=5.6.1=py37hc8dfbb8_1
   - s3transfer=0.3.3=py37hc8dfbb8_1
   - scipy=1.5.2=py37hb14ef9d_0
@@ -244,6 +242,7 @@ dependencies:
     - alpha-vantage==2.2.0
     - amqp==2.5.2
     - ansi2html==1.5.2
+    - appdirs==1.4.3
     - async-timeout==3.0.1
     - billiard==3.6.3.0
     - brotli==1.0.7
@@ -264,10 +263,13 @@ dependencies:
     - dash-html-components==1.0.3
     - dash-renderer==1.4.1
     - dash-table==4.7.0
+    - datetime==4.3
+    - deprecation==2.1.0
     - dnspython==1.16.0
     - dtale==1.8.1
+    - eikon==1.1.2
     - et-xmlfile==1.0.1
-    - findatapy==0.1.14
+    - findatapy==0.1.15
     - flask-compress==1.5.0
     - flask-ngrok==0.0.25
     - flask-seasurf==0.2.2
@@ -275,7 +277,13 @@ dependencies:
     - fsspec==0.3.3
     - future==0.18.2
     - fxcmpy==1.2.6
+    - h11==0.8.1
+    - h2==3.2.0
+    - hpack==3.0.0
     - html5lib==1.1
+    - http3==0.6.7
+    - hyperframe==5.2.0
+    - idna==2.8
     - inflection==0.5.1
     - influxdb==5.2.3
     - jdcal==1.4.1
@@ -288,6 +296,7 @@ dependencies:
     - multiprocessing-on-dill==3.5.0a4
     - multitasking==0.0.9
     - mysql-connector-python==8.0.19
+    - nest-asyncio==1.0.0
     - oauthlib==3.1.0
     - openpyxl==3.0.5
     - pandas-datareader==0.9.0
@@ -300,8 +309,11 @@ dependencies:
     - python-memcached==1.59
     - qpython==2.0.0
     - quandl==3.5.2
+    - requests==2.22.0
+    - requests-async==0.6.2
     - requests-oauthlib==1.3.0
     - retrying==1.3.3
+    - rfc3986==1.4.0
     - secretstorage==3.1.2
     - socketio-client==0.7.2
     - tap-py==3.0
@@ -313,3 +325,5 @@ dependencies:
     - websocket-client==0.57.0
     - yarl==1.5.1
     - yfinance==0.1.54
+    - zope-interface==5.1.0
+prefix: /home/tcapyuser/anaconda3/envs/py37tca
