--- a/batch_scripts/windows/installation/environment_windows_py37tca.yml
+++ b/batch_scripts/windows/installation/environment_windows_py37tca.yml
@@ -8,7 +8,7 @@ dependencies:
   - argon2-cffi=20.1.0=py37h4ab8f01_1
   - arrow-cpp=1.0.1=py37h1234567_1_cpu
   - atomicwrites=1.4.0=pyh9f0ad1d_0
-  - attrs=20.1.0=pyh9f0ad1d_0
+  - attrs=20.2.0=pyh9f0ad1d_0
   - aws-sdk-cpp=1.7.164=vc14h84f8083_2
   - backcall=0.2.0=pyh9f0ad1d_0
   - backports=1.0=py_2
@@ -16,8 +16,8 @@ dependencies:
   - beautifulsoup4=4.9.1=py_1
   - blas=1.0=mkl
   - bleach=3.1.5=pyh9f0ad1d_0
-  - blosc=1.20.0=ha925a31_0
-  - bokeh=2.2.0=py37hc8dfbb8_0
+  - blosc=1.20.1=ha925a31_0
+  - bokeh=2.2.1=py37hc8dfbb8_0
   - bqplot=0.12.16=pyh9f0ad1d_0
   - brotlipy=0.7.0=py37h4ab8f01_1000
   - bzip2=1.0.8=he774522_3
@@ -32,17 +32,17 @@ dependencies:
   - comtypes=1.1.7=py37hc8dfbb8_1001
   - coverage=5.2.1=py37h4ab8f01_0
   - coveralls=2.1.2=py_0
-  - cryptography=3.0=py37h26f1ce3_0
+  - cryptography=3.1=py37h26f1ce3_0
   - curl=7.71.1=h4b64cdc_5
   - cycler=0.10.0=py_2
   - cython=0.29.21=py37h1834ac0_0
   - cytoolz=0.10.1=py37hfa6e2cd_0
-  - dask=2.24.0=py_0
-  - dask-core=2.24.0=py_0
+  - dask=2.25.0=py_0
+  - dask-core=2.25.0=py_0
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
   - dill=0.3.2=pyh9f0ad1d_0
-  - distributed=2.24.0=py37hc8dfbb8_0
+  - distributed=2.25.0=py37hc8dfbb8_0
   - docopt=0.6.2=py_1
   - entrypoints=0.3=py37hc8dfbb8_1001
   - enum-compat=0.0.3=py37hc8dfbb8_1
@@ -56,22 +56,22 @@ dependencies:
   - hdf5=1.10.6=nompi_he0bbb20_101
   - heapdict=1.0.1=py_0
   - icc_rt=2019.0.0=h0cc432a_1
-  - icu=64.2=he025d50_1
+  - icu=67.1=h33f27b4_0
   - idna=2.10=pyh9f0ad1d_0
   - importlib-metadata=1.7.0=py37hc8dfbb8_0
   - importlib_metadata=1.7.0=0
   - iniconfig=1.0.1=pyh9f0ad1d_0
-  - intel-openmp=2020.2=254
+  - intel-openmp=2019.4=245
   - ipykernel=5.3.4=py37h5ca1d4c_0
-  - ipython=7.17.0=py37hc6149b9_0
+  - ipython=7.18.1=py37hc6149b9_0
   - ipython_genutils=0.2.0=py_1
-  - ipywidgets=7.5.1=py_0
+  - ipywidgets=7.5.1=pyh9f0ad1d_1
   - jedi=0.17.2=py37hc8dfbb8_0
   - jinja2=2.11.2=pyh9f0ad1d_0
   - jpeg=9d=he774522_0
   - json5=0.9.4=pyh9f0ad1d_0
   - jsonschema=3.2.0=py37hc8dfbb8_1
-  - jupyter_client=6.1.6=py_0
+  - jupyter_client=6.1.7=py_0
   - jupyter_contrib_core=0.3.3=py_2
   - jupyter_contrib_nbextensions=0.5.1=py37_0
   - jupyter_core=4.6.3=py37hc8dfbb8_1
@@ -81,10 +81,10 @@ dependencies:
   - jupyterlab=2.2.6=py_0
   - jupyterlab_server=1.2.0=py_0
   - kiwisolver=1.2.0=py37heaa310e_0
-  - krb5=1.17.1=hc04afaa_2
+  - krb5=1.17.1=hc04afaa_3
   - libblas=3.8.0=14_mkl
   - libcblas=3.8.0=14_mkl
-  - libclang=9.0.1=default_hf44288c_0
+  - libclang=10.0.1=default_hf44288c_1
   - libcurl=7.71.1=h4b64cdc_5
   - libiconv=1.16=he774522_0
   - liblapack=3.8.0=14_mkl
@@ -96,7 +96,7 @@ dependencies:
   - libutf8proc=2.5.0=h9e6e254_2
   - libxml2=2.9.10=h1006b36_2
   - libxslt=1.1.33=h579f668_1
-  - llvmlite=0.34.0=py37h8b575af_0
+  - llvmlite=0.34.0=py37h8b575af_1
   - locket=0.2.0=py_2
   - lxml=4.5.2=py37h8ba8a40_0
   - lz4=3.1.0=py37h2519948_0
@@ -114,15 +114,15 @@ dependencies:
   - mkl-service=2.3.0=py37hfa6e2cd_0
   - mock=4.0.2=py37hc8dfbb8_0
   - mockextras=1.0.2=py37hc8dfbb8_1
-  - more-itertools=8.4.0=py_0
+  - more-itertools=8.5.0=py_0
   - msgpack-python=1.0.0=py37heaa310e_1
   - msys2-conda-epoch=20160418=1
   - multiprocess=0.70.10=py37h4ab8f01_0
   - nbconvert=5.6.1=py37hc8dfbb8_1
   - nbformat=5.0.7=py_0
-  - nodejs=14.8.0=0
+  - nodejs=14.10.0=0
   - notebook=6.1.3=py37hc8dfbb8_0
-  - numba=0.51.0=py37h414f9d2_0
+  - numba=0.51.2=py37h414f9d2_0
   - numexpr=2.7.1=py37h1834ac0_1
   - numpy=1.19.1=py37h7cee19a_2
   - olefile=0.46=py_0
@@ -142,13 +142,13 @@ dependencies:
   - pluggy=0.13.1=py37hc8dfbb8_2
   - pox=0.2.8=pyh9f0ad1d_0
   - prometheus_client=0.8.0=pyh9f0ad1d_0
-  - prompt-toolkit=3.0.6=py_0
+  - prompt-toolkit=3.0.7=py_0
   - psutil=5.7.2=py37h4ab8f01_0
   - py=1.9.0=pyh9f0ad1d_0
   - pyarrow=1.0.1=py37h1234567_1_cpu
   - pycparser=2.20=pyh9f0ad1d_2
   - pygments=2.6.1=py_0
-  - pymongo=3.10.1=py37h1834ac0_2
+  - pymongo=3.11.0=py37h1834ac0_3
   - pymssql=2.1.4=py37he774522_0
   - pyodbc=4.0.30=py37h6538335_0
   - pyopenssl=19.1.0=py_1
@@ -159,7 +159,7 @@ dependencies:
   - pytables=3.6.1=py37h2d87964_2
   - pytest=6.0.1=py37hc8dfbb8_0
   - pytest-cov=2.10.1=pyh9f0ad1d_0
-  - python=3.7.7=h81c818b_4
+  - python=3.7.9=h60c2a47_0
   - python-blosc=1.9.1=py37hca44ab5_0
   - python-dateutil=2.8.1=py_0
   - python-snappy=0.5.4=py37h9a6de72_1
@@ -169,7 +169,7 @@ dependencies:
   - pywinpty=0.5.7=py37_0
   - pyyaml=5.3.1=py37h8055547_0
   - pyzmq=19.0.2=py37h453f00a_0
-  - qt=5.12.5=h7ef1ec2_0
+  - qt=5.12.6=hb2cf2c5_0
   - re2=2020.08.01=ha925a31_0
   - redis-py=3.5.3=pyh9f0ad1d_0
   - requests=2.24.0=pyh9f0ad1d_0
@@ -184,7 +184,7 @@ dependencies:
   - soupsieve=2.0.1=py_1
   - sqlalchemy=1.3.19=py37h4ab8f01_0
   - sqlite=3.33.0=h2a8f88b_0
-  - statsmodels=0.11.1=py37h4ab8f01_2
+  - statsmodels=0.12.0=py37h4ab8f01_0
   - tblib=1.6.0=py_0
   - terminado=0.8.3=py37hc8dfbb8_1
   - testpath=0.4.4=py_0
@@ -222,11 +222,12 @@ dependencies:
     - alpha-vantage==2.2.0
     - amqp==2.5.2
     - ansi2html==1.5.2
+    - appdirs==1.4.3
     - async-timeout==3.0.1
     - billiard==3.6.3.0
     - boto3==1.5.11
     - botocore==1.8.50
-    - brotli==1.0.7
+    - brotli==1.0.9
     - cairocffi==1.1.0
     - cairosvg==2.4.2
     - celery==4.4.0
@@ -244,11 +245,14 @@ dependencies:
     - dash-html-components==1.0.3
     - dash-renderer==1.4.1
     - dash-table==4.7.0
+    - datetime==4.3
+    - deprecation==2.1.0
     - dnspython==1.16.0
     - docutils==0.16
     - dtale==1.8.1
+    - eikon==1.1.2
     - et-xmlfile==1.0.1
-    - findatapy==0.1.12
+    - findatapy==0.1.15
     - flask==1.1.2
     - flask-compress==1.5.0
     - flask-ngrok==0.0.25
@@ -257,7 +261,12 @@ dependencies:
     - fsspec==0.3.3
     - future==0.18.2
     - fxcmpy==1.2.6
+    - h11==0.8.1
+    - h2==3.2.0
+    - hpack==3.0.0
     - html5lib==1.1
+    - http3==0.6.7
+    - hyperframe==5.2.0
     - inflection==0.5.1
     - influxdb==5.2.3
     - itsdangerous==1.1.0
@@ -265,12 +274,13 @@ dependencies:
     - jmespath==0.10.0
     - jupyter-dash==0.2.1
     - kaleido==0.0.2
-    - keyring==21.3.1
+    - keyring==21.4.0
     - kombu==4.6.7
     - multidict==4.7.6
     - multiprocessing-on-dill==3.5.0a4
     - multitasking==0.0.9
     - mysql-connector-python==8.0.19
+    - nest-asyncio==1.0.0
     - oauthlib==3.1.0
     - openpyxl==3.0.5
     - pandas-datareader==0.9.0
@@ -287,8 +297,10 @@ dependencies:
     - pywin32-ctypes==0.2.0
     - qpython==2.0.0
     - quandl==3.5.2
+    - requests-async==0.6.2
     - requests-oauthlib==1.3.0
     - retrying==1.3.3
+    - rfc3986==1.4.0
     - s3transfer==0.1.13
     - socketio-client==0.7.2
     - tap-py==3.0
@@ -301,3 +313,5 @@ dependencies:
     - werkzeug==1.0.1
     - yarl==1.5.1
     - yfinance==0.1.54
+    - zope-interface==5.1.0
+prefix: C:\Anaconda3\envs\py37tca
