--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ dash-auth==1.3.2
 cufflinks==0.17.3
 plotly==4.9.0
 kaleido
+eikon==1.1.2
 chart-studio==1.1.0
 dash==1.12.0
 dash-bootstrap-components==0.10.3
